respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Quote_Item_Line__c.object
<CustomObject>
    <fields>
        <fullName>Total_Destination_Amount__c</fullName>
        <description>Conversion to currency of (&quot;Amount&quot; + &quot;Imp-Exp Charges Assigned&quot; + &quot;Total Taxes&quot;) / &quot;Margin at Destination&quot;, from Destination Sell Amount Roll-Up</description>
        <formula>(Amount__c +  Imp_Exp_Charges_Assigned_copy__c + Total_Taxes_Form__c)/(1- Margin_at_Destination__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(&quot;Amount&quot; + &quot;Imp-Exp Charges Assigned&quot; + &quot;Total Taxes&quot;) / &quot;Margin at Destination&quot;</inlineHelpText>
        <label>Destination Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Shipping_Volume_m3__c</fullName>
        <label>Total Shipping Volume (m3)</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Shipping_Weight_Kgs__c</fullName>
        <label>Peso Bruto (KG)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Taxes_Form__c</fullName>
        <description>Conversion to currency of &quot;Duty&quot; + &quot;Sales Tax&quot; + &quot;Additional Import Taxes Amount&quot;, from Total Taxes Roll-Up</description>
        <formula>Duty__c + Sales_Tax__c + Additional_Import_Taxes_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Duty&quot; + &quot;Sales Tax&quot; + &quot;Additional Import Taxes Amount&quot;</inlineHelpText>
        <label>Total Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Taxes_header_currency__c</fullName>
        <formula>Total_Taxes_Form__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Taxes (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume_Item_m3__c</fullName>
        <description>Product of &quot;Units&quot; x ; if Item Name&apos;s &quot;Units x Master Box&quot; not 0 then Item Name&apos;s &quot;Master Box Volume (m3)&quot; /&quot;Units x Master Box&quot;, else 0</description>
        <formula>(IF(Item_Name__r.Units_x_Master_Box__c&lt;&gt;0,(Item_Name__r.Master_Box_Volume_m3__c / Item_Name__r.Units_x_Master_Box__c),null))* Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Units&quot; x (&quot;Master Box Volume (m3)&quot; / &quot;Units x Master Box&quot;)</inlineHelpText>
        <label>Total Volume Items (m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unidad_Peso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidad Peso</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Unidad Peso</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Destination_Buy_Price__c</fullName>
        <description>Conversion to currency of (&quot;Amount&quot; + &quot;Imp-Exp Charges Assigned&quot; + &quot;Total Taxes&quot;) / &quot;Units&quot;</description>
        <formula>(Amount__c + Imp_Exp_Charges_Assigned_copy__c + Total_Taxes_Form__c)/ Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(&quot;Amount&quot; + &quot;Imp-Exp Charges Assigned&quot; + &quot;Total Taxes&quot;) / &quot;Units&quot;</inlineHelpText>
        <label>Unit Destination Buy Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Destination_Price__c</fullName>
        <description>Conversion to currency of &quot;Total Destination Amount&quot; / &quot;Units&quot;</description>
        <formula>Total_Destination_Amount__c /  Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Destination Amount&quot; / &quot;Units&quot;</inlineHelpText>
        <label>Unit Destination Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Origin_Buy_Price__c</fullName>
        <label>Unit Origin Buy Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_measure__c</fullName>
        <formula>TEXT (Item_Name__r.Unit_of_measure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Kgs__c</fullName>
        <formula>BLANKVALUE(Units__c  * BLANKVALUE( Item_Name__r.Master_Box_Gross_Weight_kg__c / Item_Name__r.Units_x_Master_Box__c , Item_Name__r.Weight_Kgs__c ),0)</formula>
        <inlineHelpText>&quot;Units&quot; x (&quot;Master Box Gross Weight (Kg)&quot;/&quot;Units x Master Box&quot;)</inlineHelpText>
        <label>Peso Bruto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pallet_warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pallet Warehouse</label>
        <referenceTo>pallet_warehouse__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tare_weight__c</fullName>
        <description>Peso Tara = Valor Calculado como el Peso Bruto - Peso Neto.</description>
        <formula>Total_Shipping_Weight_Kgs__c - Weight_Kgs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Peso Tara = Valor Calculado como el Peso Bruto - Peso Neto.</inlineHelpText>
        <label>tare weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Import-Export Cargo Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_for_Customer__c</columns>
        <columns>Import_Export_Quote__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Import_Export_Quote__c</field>
            <operation>equals</operation>
            <value>FN-19-019479</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Imp-Exp Cargo Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Import-Export Cargo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CP001MaterialPeligroso</fullName>
        <active>true</active>
        <description>Clave producto o servicio 1, pedir obligatorio Embalaje y Tipo de Material Peligroso</description>
        <errorConditionFormula>AND(
OR(CONTAINS( Import_Export_Quote__r.FolioResume__c ,&apos;FN&apos;),
CONTAINS( Import_Export_Quote__r.FolioResume__c ,&apos;FI&apos;),
CONTAINS( Import_Export_Quote__r.FolioResume__c ,&apos;PTO&apos;)),
Clave_de_Servicio__r.Material_PeligrosoCP__c = true,
OR(ISBLANK( Embalaje_Cat__c ),
ISBLANK( Material_Peligroso_Cat__c ))
)</errorConditionFormula>
        <errorDisplayField>Material_Peligroso_Cat__c</errorDisplayField>
        <errorMessage>ERROR CP-001, El producto o servicio requiere un material peligroso y embalaje</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CP002_Pedimento_y_Fraccion_Arancelaria</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR( Import_Export_Quote__r.FolioResume__c =&apos;FI&apos;,
   Import_Export_Quote__r.FolioResume__c =&apos;PT&apos;
),
OR(
ISBLANK( Pedimento__c),
ISBLANK( CP_Fraccion_Arancelaria_IE__c)
),
ISPICKVAL( Import_Export_Quote__r.Quotation_Status__c , &quot;Approved as Succesful&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Pedimento__c</errorDisplayField>
        <errorMessage>ERROR CP002 : Favor de agregar Pedimento y Fracción Arancelaria</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Margin_at_Origin_or_Destination</fullName>
        <active>false</active>
        <errorConditionFormula>( BLANKVALUE( Margin__c , 0)&lt;&gt;0)  &amp;&amp; 
 ( BLANKVALUE( Margin_at_Destination__c , 0)&lt;&gt;0)</errorConditionFormula>
        <errorDisplayField>Margin_at_Destination__c</errorDisplayField>
        <errorMessage>There is already a Margin at Origin</errorMessage>
    </validationRules>
</CustomObject>